--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -31,11 +31,11 @@
                         </tr>
                         <tr>
                             <th>Average daily alcohol intake (Fri-Sun)</th>
-                            <td>{{profile.avgWeekend | number:2}} cl</td>
+                            <td>{{profile.avgAlcWeekend | number:2}} cl</td>
                         </tr>
                         <tr>
                             <th>Average daily alcohol intake (Mon-Thu)</th>
-                            <td>{{profile.avgWorkWeek | number:2}} cl</td>
+                            <td>{{profile.avgAlcWorkWeek | number:2}} cl</td>
                         </tr>
                         <tr>
                             <th>Consistency factor</th>
