--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -17,13 +17,13 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Consistency Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingConsistencyFactor"
+                                <tr ng-repeat="rank in ranking.rankingConsistencyFactor | limitTo:3"
                                     ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
@@ -32,13 +32,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Habitual Drinker Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingDrinkingDayRate"
+                                <tr ng-repeat="rank in ranking.rankingDrinkingDayRate | limitTo:3"
                                     ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
@@ -47,13 +47,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Binge Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingHighestBinge" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingHighestBinge | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -63,13 +63,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Weekend Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingWeekend" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingWeekend | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:3}}</td>
@@ -77,13 +77,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Sunday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingSun" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingSun | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -91,13 +91,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Working Week Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingWorkWeek" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingWorkWeek | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -115,13 +115,13 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Pilsner Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingPilsner" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingPilsner | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:3}}</td>
@@ -129,13 +129,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Whisky Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingLiquor" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingLiquor | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -143,13 +143,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Happy Loner Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingHappyLoner" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingHappyLoner | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -159,13 +159,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Trappist Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingStrongbeer" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingStrongbeer | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:3}}</td>
@@ -173,13 +173,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Wine Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingWine" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingWine | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -187,13 +187,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Sad Loner Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingSadLoner" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingSadLoner | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -211,13 +211,13 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Monday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingMon" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingMon | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:3}}</td>
@@ -225,13 +225,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Wednesday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingWed" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingWed | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -239,13 +239,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Friday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingFri" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingFri | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -255,13 +255,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Tuesday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingTue" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingTue | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:3}}</td>
@@ -269,13 +269,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Thursday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingThu" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingThu | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
@@ -283,13 +283,13 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <table class="table">
+                            <table class="table table-condensed">
                                 <thead>
                                 <tr>
                                     <th colspan="3">Saturday Trophy</th>
                                 </tr>
                                 </thead>
-                                <tr ng-repeat="rank in ranking.rankingSat" ng-class="{active: $index === 0}">
+                                <tr ng-repeat="rank in ranking.rankingSat | limitTo:3" ng-class="{active: $index === 0}">
                                     <td>{{$index + 1}}</td>
                                     <td>{{rank.user.username}}</td>
                                     <td>{{rank.value | number:2}}</td>
