--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -47,7 +47,7 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">7-day Drinking Trend</h3>
+                    <h3 class="panel-title">Averaged Drinking Trend</h3>
                 </div>
                 <div class="panel-body">
                     <canvas id="spreadTrend" class="chart chart-line" data="spreadAverageData"
